--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-06 Thu 17:06]
+#+CAPTION: Clock summary at [2016-10-06 Thu 20:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *75:07* |       |       | 100.0 |
+| *Total time*                                                                | *75:22* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 75:07   |       |       | 100.0 |
-| Active                                                                      |         | 75:07 |       | 100.0 |
+| Stories                                                                     | 75:22   |       |       | 100.0 |
+| Active                                                                      |         | 75:22 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   7.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.2 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.3 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.4 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.3 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.5 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.1 |
@@ -54,14 +54,14 @@
 | COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.5 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   4.1 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   4.0 |
 | COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.3 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.5 |
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.9 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.5 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.7 |
 | CANCELLED Add support for profiles                                          |         |       | 10:40 |  14.2 |
-| STARTED Refactor =yarn.dia= transformer                                     |         |       |  2:43 |   3.6 |
+| STARTED Refactor =yarn.dia= transformer                                     |         |       |  2:58 |   3.9 |
 | STARTED Create a dynamic expander in yarn                                   |         |       |  0:20 |   0.4 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.9 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
@@ -1234,6 +1234,7 @@ Algorithm:
   - if nothing was found, get the default value of the meta-data.
 
 *** STARTED Refactor =yarn.dia= transformer                           :story:
+    CLOCK: [2016-10-06 Thu 20:20]--[2016-10-06 Thu 20:35] =>  0:15
     CLOCK: [2016-10-06 Thu 15:40]--[2016-10-06 Thu 17:06] =>  1:26
     CLOCK: [2016-10-06 Thu 13:23]--[2016-10-06 Thu 14:40] =>  1:17
 
