--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-06 Thu 20:35]
+#+CAPTION: Clock summary at [2016-10-06 Thu 23:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *75:22* |       |       | 100.0 |
+| *Total time*                                                                | *77:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 75:22   |       |       | 100.0 |
-| Active                                                                      |         | 75:22 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   7.3 |
+| Stories                                                                     | 77:29   |       |       | 100.0 |
+| Active                                                                      |         | 77:29 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   7.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.2 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.3 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.2 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.3 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.5 |
@@ -32,38 +32,38 @@
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.6 |
 | COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.8 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.5 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.9 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.8 |
 | COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.9 |
-| COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.4 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.8 |
+| COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.8 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.7 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.8 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   2.0 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   5.3 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   5.1 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.5 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.9 |
-| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.8 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   9.4 |
-| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   2.0 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.8 |
+| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.7 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   9.1 |
+| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.9 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.5 |
-| COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.4 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.5 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.4 |
+| COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.3 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   4.0 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.3 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.9 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.2 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.5 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.9 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.8 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.5 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.7 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  14.2 |
-| STARTED Refactor =yarn.dia= transformer                                     |         |       |  2:58 |   3.9 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.8 |
+| STARTED Refactor =yarn.dia= transformer                                     |         |       |  5:05 |   6.6 |
 | STARTED Create a dynamic expander in yarn                                   |         |       |  0:20 |   0.4 |
-| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.9 |
+| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.8 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1234,6 +1234,7 @@ Algorithm:
   - if nothing was found, get the default value of the meta-data.
 
 *** STARTED Refactor =yarn.dia= transformer                           :story:
+    CLOCK: [2016-10-06 Thu 22:47]--[2016-10-06 Thu 23:34] =>  0:47
     CLOCK: [2016-10-06 Thu 22:23]--[2016-10-06 Thu 22:46] =>  0:23
     CLOCK: [2016-10-06 Thu 20:36]--[2016-10-06 Thu 21:33] =>  0:57
     CLOCK: [2016-10-06 Thu 20:20]--[2016-10-06 Thu 20:35] =>  0:15
