--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,19 +13,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 00:22]
+#+CAPTION: Clock summary at [2016-10-07 Fri 00:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *78:17* |       |       | 100.0 |
+| *Total time*                                                                | *78:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 78:17   |       |       | 100.0 |
-| Active                                                                      |         | 78:17 |       | 100.0 |
+| Stories                                                                     | 78:42   |       |       | 100.0 |
+| Active                                                                      |         | 78:42 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   7.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.2 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.3 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.2 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.5 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.0 |
@@ -37,10 +37,10 @@
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.8 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.7 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.6 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.8 |
-| COMPLETED Create the formattables model                                     |         |       |  1:32 |   2.0 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   5.1 |
+| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.9 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   5.0 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.5 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.7 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.7 |
@@ -55,13 +55,13 @@
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.9 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.2 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.1 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.5 |
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.7 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.7 |
 | CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.6 |
-| STARTED Refactor =yarn.dia= transformer                                     |         |       |  5:53 |   7.5 |
+| STARTED Refactor =yarn.dia= transformer                                     |         |       |  6:18 |   8.0 |
 | STARTED Create a dynamic expander in yarn                                   |         |       |  0:20 |   0.4 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.8 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
@@ -1234,6 +1234,7 @@ Algorithm:
   - if nothing was found, get the default value of the meta-data.
 
 *** STARTED Refactor =yarn.dia= transformer                           :story:
+    CLOCK: [2016-10-07 Fri 00:23]--[2016-10-07 Fri 00:48] =>  0:25
     CLOCK: [2016-10-06 Thu 23:34]--[2016-10-07 Fri 00:22] =>  0:48
     CLOCK: [2016-10-06 Thu 22:47]--[2016-10-06 Thu 23:34] =>  0:47
     CLOCK: [2016-10-06 Thu 22:23]--[2016-10-06 Thu 22:46] =>  0:23
