yarn: add raw kvp support to indices

--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 11:07]
+#+CAPTION: Clock summary at [2016-10-07 Fri 11:54]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *80:46* |       |       | 100.0 |
+| *Total time*                                                                | *81:31* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 80:46   |       |       | 100.0 |
-| Active                                                                      |         | 80:46 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.8 |
+| Stories                                                                     | 81:31   |       |       | 100.0 |
+| Active                                                                      |         | 81:31 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.1 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.2 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.5 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.0 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.6 |
@@ -42,9 +42,9 @@
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.9 |
 | COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.9 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.4 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.6 |
-| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.7 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.8 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.5 |
+| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.6 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.7 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.8 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
@@ -54,15 +54,15 @@
 | COMPLETED Refactor code around model origination                            |         |       |  4:08 |   5.1 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.8 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.7 |
 | COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   4.0 |
-| COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.5 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.6 |
+| COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.5 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.7 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.2 |
-| STARTED Refactor =yarn.dia= transformer                                     |         |       |  8:22 |  10.4 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  0:20 |   0.4 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.1 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.8 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  0:38 |   0.8 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.8 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1233,7 +1233,9 @@ Algorithm:
     formatter specific profile. If so, see if its enabled or not.
   - if nothing was found, get the default value of the meta-data.
 
-*** STARTED Refactor =yarn.dia= transformer                           :story:
+*** COMPLETED Refactor =yarn.dia= transformer                         :story:
+    CLOSED: [2016-10-07 Fri 11:34]
+    CLOCK: [2016-10-07 Fri 11:08]--[2016-10-07 Fri 11:35] =>  0:27
     CLOCK: [2016-10-07 Fri 10:32]--[2016-10-07 Fri 11:07] =>  0:35
     CLOCK: [2016-10-07 Fri 10:07]--[2016-10-07 Fri 10:31] =>  0:24
     CLOCK: [2016-10-07 Fri 09:01]--[2016-10-07 Fri 10:06] =>  1:05
@@ -1287,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 11:36]--[2016-10-07 Fri 11:54] =>  0:18
     CLOCK: [2016-10-06 Thu 13:03]--[2016-10-06 Thu 13:23] =>  0:20
 
 We need to move this work from the front end into yarn.
