--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 12:45]
+#+CAPTION: Clock summary at [2016-10-07 Fri 12:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *82:21* |       |       | 100.0 |
+| *Total time*                                                                | *82:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 82:21   |       |       | 100.0 |
-| Active                                                                      |         | 82:21 |       | 100.0 |
+| Stories                                                                     | 82:27   |       |       | 100.0 |
+| Active                                                                      |         | 82:27 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   3.0 |
@@ -60,9 +60,9 @@
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.5 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  13.0 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.9 |
 | COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.7 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  1:28 |   1.8 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  1:34 |   1.9 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1289,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 12:46]--[2016-10-07 Fri 12:52] =>  0:06
     CLOCK: [2016-10-07 Fri 11:55]--[2016-10-07 Fri 12:45] =>  0:50
     CLOCK: [2016-10-07 Fri 11:36]--[2016-10-07 Fri 11:54] =>  0:18
     CLOCK: [2016-10-06 Thu 13:03]--[2016-10-06 Thu 13:23] =>  0:20
